--- a/views/index.pug
+++ b/views/index.pug
@@ -33,6 +33,7 @@ html
             |Kayıt Ol
       - const fromValue = typeof fromId !== 'undefined' ? fromId : '';
       - const toValue = typeof toId !== 'undefined' ? toId : '';
+      p Türkiye'nin En Yeni Online Yazıhanesi
       .trip-finder.border
         .trip-finder_selects
           .d-flex.flex-column
