--- a/views/index.pug
+++ b/views/index.pug
@@ -74,6 +74,18 @@ html
             button(type='button').trip-finder_day-button(data-day='tomorrow') Yarın
           button.trip-finder_search-button ARA
     +authModals()
+    .d-flex.gap-3
+      .d-flex.flex-column.border
+        p Çözümcü Online Destek
+      .d-flex.flex-column.border
+        p Güvenli Ödeme
+      .d-flex.flex-column.border
+        p Avantajlı Bilet
+      .d-flex.flex-column.border
+        p İşlem Kolaylığı
+      .d-flex.flex-column.border
+        p Kullanıcı Dostu Kampanyalar
+
   script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/js/all.min.js")
