--- a/views/layout_invert.pug
+++ b/views/layout_invert.pug
@@ -9,27 +9,43 @@ html
     link(rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png")
     link(rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon")
     link(rel='stylesheet' href='/flatpickr/dist/flatpickr.min.css')
+    link(rel='stylesheet' href='/select2/dist/css/select2.min.css')
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css')
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css')
     link(rel='stylesheet' href='/css/style.css')
+    link(rel='stylesheet' href='/css/place-select.css')
+    block css
   body
     .gtr-header-invert
       .d-flex.justify-content-between
-        img(src="/images/gotur_vip_logo.png" alt="GÖTÜR")
+        a.navbar-brand(href="/")
+          img(src="/images/gotur_vip_logo.png" alt="GÖTÜR")
         .d-flex.gap-3.align-items-center
-          a.gtr-link
+          a.gtr-link#findMyTicket
             i.fa-solid.fa-magnifying-glass.me-1
             |Biletimi Bul
-          a.gtr-link(href='javascript:void(0)' role='button' data-bs-toggle='modal' data-bs-target='#loginModal')
-            i.fa-solid.fa-user-check.me-1
-            |Giriş Yap
-          a.gtr-link(href='javascript:void(0)' role='button' data-bs-toggle='modal' data-bs-target='#registerModal')
-            i.fa-solid.fa-user-plus.me-1
-            |Kayıt Ol
+          if currentUser
+            a.gtr-link#myTrips(href='#' role='button')
+              i.fa-solid.fa-road.me-1
+              |Seyahatlerim
+            a.gtr-link#myAccount(href='#' role='button')
+              i.fa-solid.fa-user.me-1
+              |Hesabım
+            a.gtr-link#logoutButton(href='#' role='button')
+              i.fa-solid.fa-right-from-bracket.me-1
+              |Çıkış Yap
+          else
+            a.gtr-link(href='javascript:void(0)' role='button' data-bs-toggle='modal' data-bs-target='#loginModal')
+              i.fa-solid.fa-user-check.me-1
+              |Giriş Yap
+            a.gtr-link(href='javascript:void(0)' role='button' data-bs-toggle='modal' data-bs-target='#registerModal')
+              i.fa-solid.fa-user-plus.me-1
+              |Kayıt Ol
+      p Türkiye'nin En Yeni Online Yazıhanesi
+      block headerContent
 
 
-    .container
-      block content
+    block content
 
     +authModals()
 
@@ -37,6 +53,8 @@ html
     script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/js/all.min.js")
     script(src="https://code.jquery.com/jquery-3.7.1.min.js")
+    script(src="/select2/dist/js/select2.min.js")
     script(src="/flatpickr/dist/flatpickr.min.js")
     script(src="/flatpickr/dist/l10n/tr.js")
+    script(src="/js/place-select.js")
     block scripts
