--- a/public/css/index.css
+++ b/public/css/index.css
@@ -31,7 +31,8 @@
 .place-select {
     height: 70%;
 }
-.place-select_display{
+
+.place-select_display {
     height: 100%;
 }
 
@@ -111,4 +112,29 @@
     width: 10rem;
     background-color: white;
     margin-top: .5rem;
+}
+
+.attribute {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+    gap: .5rem;
+    border: 1px solid #2660ff9c;
+    border-radius: 5px;
+    user-select: none;
+}
+
+.attribute:hover{
+    transform: scale(1.05);
+}
+
+.attribute h4 {
+    font-weight: bold;
+    color: #303030;
+}
+
+.attributes_icon {
+    height: 15vh;
 }
