--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,6 +108,7 @@ body {
 }
 
 .gtr-header {
+  user-select: none;
   height: 10vh;
   width: 100%;
   background-color: #2660ff !important;
@@ -116,6 +117,7 @@ body {
 }
 
 .gtr-header-invert {
+  user-select: none;
   height: 10vh;
   width: 100%;
   background-color: white !important;
@@ -133,7 +135,6 @@ a.gtr-link {
   font-size: 1.25rem;
   color: white;
   text-decoration: none;
-  user-select: none;
   cursor: pointer;
 }
 
@@ -143,6 +144,27 @@ a.gtr-link:hover {
 
 a.gtr-link:active {
   color: #c4c4c4;
+  transform: scale(0.95);
+}
+
+.gtr-header-invert p {
+  color: #2660ff;
+}
+
+.gtr-header-invert .gtr-link {
+  font-weight: 500;
+  font-size: 1.25rem;
+  color: #313131;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.gtr-header-invert .gtr-link:hover {
+  color: #1f1f1f;
+}
+
+.gtr-header-invert .gtr-link:active {
+  color: #0e0e0e;
   transform: scale(0.95);
 }
 
