--- a/views/index.pug
+++ b/views/index.pug
@@ -29,9 +29,17 @@ html
             a.gtr-link#myTrips(href='#' role='button')
               i.fa-solid.fa-road.me-1
               |Seyahatlerim
-            a.gtr-link#myAccount(href='#' role='button')
-              i.fa-solid.fa-user.me-1
-              |Hesabım
+            .dropdown
+              a.gtr-link.dropdown-toggle#myAccount(href='#' role='button' data-bs-toggle='dropdown' aria-expanded='false')
+                i.fa-solid.fa-user.me-1
+                |Hesabım
+              ul.dropdown-menu.dropdown-menu-end(aria-labelledby='myAccount')
+                li
+                  a.dropdown-item#accountPersonalInfo(href='/user?section=personal') Kişisel Bilgilerim
+                li
+                  a.dropdown-item#accountCards(href='/user?section=cards') Kartlarım
+                li
+                  a.dropdown-item#accountPassengers(href='/user?section=passengers') Yolcularım
             a.gtr-link#logoutButton(href='#' role='button')
               i.fa-solid.fa-right-from-bracket.me-1
               |Çıkış Yap
