--- a/views/layout.pug
+++ b/views/layout.pug
@@ -34,11 +34,11 @@ html
                 |Hesabım
               ul.dropdown-menu.dropdown-menu-end(aria-labelledby='myAccount')
                 li
-                  a.dropdown-item#accountPersonalInfo(href='/user?section=personal') Kişisel Bilgilerim
+                  a.dropdown-item#myAccountPersonalInfo(href="#") Kişisel Bilgilerim
                 li
-                  a.dropdown-item#accountCards(href='/user?section=cards') Kartlarım
+                  a.dropdown-item#myAccountCards(href="#") Kartlarım
                 li
-                  a.dropdown-item#accountPassengers(href='/user?section=passengers') Yolcularım
+                  a.dropdown-item#myAccountPassengers(href="#") Yolcularım
             a.gtr-link#logoutButton(href='#' role='button')
               i.fa-solid.fa-right-from-bracket.me-1
               |Çıkış Yap
