Add personal information management page

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -34,11 +34,11 @@ html
                 |Hesabım
               ul.dropdown-menu.dropdown-menu-end(aria-labelledby='myAccount')
                 li
-                  a.dropdown-item#myAccountPersonalInfo(href="#") Kişisel Bilgilerim
+                  a.dropdown-item#myAccountPersonalInfo(href="/user/personal-information") Kişisel Bilgilerim
                 li
-                  a.dropdown-item#myAccountCards(href="#") Kartlarım
+                  a.dropdown-item#myAccountCards(href="/user/cards") Kartlarım
                 li
-                  a.dropdown-item#myAccountPassengers(href="#") Yolcularım
+                  a.dropdown-item#myAccountPassengers(href="/user/passengers") Yolcularım
             a.gtr-link#logoutButton(href='#' role='button')
               i.fa-solid.fa-right-from-bracket.me-1
               |Çıkış Yap
