--- a/views/payment.pug
+++ b/views/payment.pug
@@ -1,3 +1,4 @@
+include components/place-select
 extends layout_invert
 
 block content
@@ -74,13 +75,24 @@ block content
                                         value=passenger.phoneNumber
                                     )
                                 .col-md-6
+                                    - const passengerNationality = (passenger.nationality || 'TR').toUpperCase()
+                                    - const nationalityOption = Array.isArray(countryOptions) ? countryOptions.find((option) => option.value === passengerNationality) : null
+                                    - const passengerNationalityLabel = nationalityOption ? nationalityOption.displayLabel : null
                                     label.form-label(for=`passenger-nationality-${index}`) Uyruk
-                                    input.form-control(
-                                        type="text"
-                                        id=`passenger-nationality-${index}`
-                                        name="nationalities"
-                                        value=passenger.nationality || 'TR'
-                                    )
+                                    +placeSelect({
+                                        placeholder: 'Uyruk seçin',
+                                        searchPlaceholder: 'Ülke ara...',
+                                        label: passengerNationalityLabel || undefined,
+                                        attrs: {
+                                            id: `passenger-nationality-select-${index}`,
+                                            'data-options-id': 'country-options'
+                                        },
+                                        input: {
+                                            id: `passenger-nationality-${index}`,
+                                            name: 'nationalities',
+                                            value: passengerNationality
+                                        }
+                                    })
 
                 .d-flex.justify-content-between.align-items-center.mt-3
                     if typeof pricePerSeat !== 'undefined'
@@ -92,3 +104,4 @@ block content
             p Henüz bir koltuk seçimi yapılmamış.
 
 block scripts
+    script(type='application/json' id='country-options')!= JSON.stringify(countryOptions || [])
