--- a/views/components/seat.pug
+++ b/views/components/seat.pug
@@ -1,6 +1,7 @@
-svg(viewBox="0 0 100 100" width="3rem" height="3rem" style="max-width:100px; border:1px solid #ccc")
-    rect(x="20" y="20" width="60" height="60" rx="10" ry="10" fill="#fff" stroke="#333" stroke-width="2")
-    rect(x="75" y="30" width="10" height="40" rx="5" ry="5" fill="#fff" stroke="#333" stroke-width="2")
-    rect(x="15" y="30" width="10" height="40" rx="5" ry="5" fill="#fff" stroke="#333" stroke-width="2")
-    rect(x="20" y="60" width="60" height="20" rx="5" ry="5" fill="#fff" stroke="#333" stroke-width="2")
-    rect(x="35" y="55" width="30" height="30" rx="5" ry="5" fill="#fff" stroke="#333" stroke-width="2")
+mixin seat(genderColor,genderColorStroke)
+    svg(viewBox="0 0 100 100" width="2.75rem" height="2.75rem" style="max-width:100px;")
+        rect(x="10" y="10" width="80" height="80" rx="10" ry="10" fill=genderColor stroke=genderColorStroke stroke-width="2")
+        rect(x="30" y="1" width="50" height="20" rx="5" ry="5" fill=genderColor stroke=genderColorStroke stroke-width="2")
+        rect(x="30" y="75" width="50" height="20" rx="5" ry="5" fill=genderColor stroke=genderColorStroke stroke-width="2")
+        rect(x="75" y="10" width="20" height="80" rx="5" ry="5" fill=genderColor stroke=genderColorStroke stroke-width="2")
+        rect(x="69" y="30" width="30" height="40" rx="5" ry="5" fill=genderColor stroke=genderColorStroke stroke-width="2")
